# CodeExcerciseCXX

./: CMakeLists.txt  LICENSE  README.md  words.txt
include/: SpellCheck.h
src/: Dictionary.cpp  Dictionary.h  Distance.cpp  IsKnownWord.cpp  Replacements.cpp
tests/: main.cc
